tests/expectations/compiler/structs/inline_fail.out
DCE_ENABLED:
Error [ETYC0372013]: Struct initialization expression for `Foo` is missing member `x`.
    --> compiler-test:9:22
     |
   9 |         let a: Foo = Foo { y: 0u32 };
     |                      ^^^^^^^^^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | program test.aleo {
     | ^^^^^^^^^^^^

DCE_DISABLED:
Error [ETYC0372013]: Struct initialization expression for `Foo` is missing member `x`.
    --> compiler-test:9:22
     |
   9 |         let a: Foo = Foo { y: 0u32 };
     |                      ^^^^^^^^^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | program test.aleo {
     | ^^^^^^^^^^^^
